# poto

./: .gitignore  CONTEXT.md  DESIGN.md  Makefile  README.md
backend/: .env.example  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agents/bo_facil/: __init__.py  workflow.py
backend/agents/bo_facil/core/: circuit_state.py  llm_fallback.py  routing.py  states.py  utils.py
backend/agents/bo_facil/core/messages/: __init__.py  helpers.py  models.py
backend/agents/bo_facil/core/tools/: __init__.py  context_extractor.py
backend/agents/bo_facil/core/user_memory/: __init__.py  config.py  manager.py  models.py
backend/agents/bo_facil/flows/anonymous/: messages.py  models.py  nodes.py  prompts.py
backend/agents/bo_facil/flows/bo_treatment/: workflow.py
backend/agents/bo_facil/flows/cancel/: __init__.py  messages.py  nodes.py
backend/agents/bo_facil/flows/emergency/: messages.py  nodes.py  prompts.py
backend/agents/bo_facil/flows/human_handoff/: messages.py  nodes.py
backend/agents/bo_facil/flows/initial/: messages.py  models.py  (+2 more)
backend/app/: __init__.py  classificador.py  config.py  db.py  main.py  models.py  notifier.py  router_engine.py  seed.py  simcom.py  sla.py  stt.py  video.py  voice_token.py  voz.py
backend/app/agents/: __init__.py  graph.py
backend/tests/: test_acceptance.py  test_classificador.py  test_notifier.py  test_router.py  test_simcom.py  test_smoke_api.py  test_triagem_parse.py
(+142 files in other folders)
